# portfolio

./: .env.example  .gitignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  jsconfig.json  next.config.js  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json
components/: Footer.tsx  Header.tsx  Layout.tsx  Loading.tsx  SeoHead.tsx  footer.jsx  header.jsx  layout.jsx  loading.jsx
data/: animations.js  animations.ts  contacts.js  contacts.ts  pages.js  pages.ts  projects.js  projects.ts  pubg_conf.ts  techstuff.ts
docs/: CNAME  index.html  portfolio-5e4241c6a54562b5.js  portfolio-5e4241c6a54562b5_bg.wasm  portfolio-7e5dc3b55b473812.js  portfolio-7e5dc3b55b473812_bg.wasm  tailwind-fe283bb6890261b1.css
pages/: Adsterra.tsx  _app.jsx  _app.tsx  _document.jsx  _document.tsx  index.jsx  index.tsx
pages/about/: index.jsx  index.tsx
pages/api/: contact-form.js  contact-form.ts
pages/contact/: index.jsx  index.tsx
pages/works/: [slug].jsx  [slug].tsx  index.jsx  index.tsx
pages/works/[slug]/: download.tsx
public/style/: tailwind.css
src/: lib.rs  main.rs
src/component/: animate.rs  footer.rs  header.rs  loading.rs  mod.rs  seo.rs
src/data/: contact.rs  mod.rs  page.rs  project.rs  techstuff.rs
src/page/: about.rs  contact.rs  home.rs  main.rs  mod.rs  works.rs
styles/: globals.css
